objects/Car__c.object
<CustomObject>
    <description>An object to store the Car information.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
                <value>
                    <fullName>MUV</fullName>
                </value>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control__c</fullName>
        <label>Control</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <label>Fuel Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <label>MSRP</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Renault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <label>Number of Seats</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Control__c</columns>
        <columns>Description__c</columns>
        <columns>Fuel_Type__c</columns>
        <columns>Make__c</columns>
        <columns>MSRP__c</columns>
        <columns>Number_of_Seats__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Car_List_View</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Control__c</columns>
        <columns>Description__c</columns>
        <columns>Fuel_Type__c</columns>
        <columns>Make__c</columns>
        <columns>MSRP__c</columns>
        <columns>Number_of_Seats__c</columns>
        <filterScope>Mine</filterScope>
        <label>Car List View</label>
    </listViews>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>